--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ quarkus.langchain4j.mistralai.base-url=${OVH_AI_ENDPOINTS_MODEL_URL}
 quarkus.langchain4j.mistralai.api-key=${OVH_AI_ENDPOINTS_ACCESS_TOKEN}
 quarkus.langchain4j.mistralai.chat-model.max-tokens=512
 quarkus.langchain4j.mistralai.chat-model.model-name=${OVH_AI_ENDPOINTS_MODEL_NAME}
-quarkus.langchain4j.mistralai.log-requests=false
-quarkus.langchain4j.mistralai.log-responses=false
+quarkus.langchain4j.mistralai.log-requests=true
+quarkus.langchain4j.mistralai.log-responses=true
 
 # AI Endpoints parameters
 ovhcloud.ai-endpoints.token=${OVH_AI_ENDPOINTS_ACCESS_TOKEN}
@@ -21,8 +21,8 @@ quarkus.langchain4j.mistralai.embedding-model.enabled=false
 ovhcloud.ai-endpoints.embedding.base-url=https://bge-multilingual-gemma2.endpoints.kepler.ai.cloud.ovh.net
 quarkus.langchain4j.embedding-model.provider=dev.langchain4j.model.ovhai.OvhAiEmbeddingModel
 
-quarkus.langchain4j.easy-rag.path=./src/main/resources/rag
-quarkus.langchain4j.easy-rag.max-segment-size=8000
-quarkus.langchain4j.easy-rag.max-results=3
-quarkus.langchain4j.easy-rag.min-score=0.1
-quarkus.langchain4j.easy-rag.ingestion-strategy=on
+#quarkus.langchain4j.easy-rag.path=./src/main/resources/rag
+#quarkus.langchain4j.easy-rag.max-segment-size=8000
+#quarkus.langchain4j.easy-rag.max-results=3
+#quarkus.langchain4j.easy-rag.min-score=0.1
+#quarkus.langchain4j.easy-rag.ingestion-strategy=on
